force-app/main/default/objects/Estate__c/Estate__c.object-meta.xml
<CustomObject>
    <label>Estate</label>
    <nameField>
        <label>Estate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>