force-app/main/default/objects/Estate__c/fields/EPR__c.field-meta.xml
<CustomField>
    <fullName>EPR__c</fullName>
    <label>EPR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>