force-app/main/default/objects/Estate__c/fields/Hosting__c.field-meta.xml
<CustomField>
    <fullName>Hosting__c</fullName>
    <label>Hosting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Premise</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Virtual Machine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>