force-app/main/default/objects/Estate__c/fields/Hosting_Provider__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Provider__c</fullName>
    <label>Hosting Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>