force-app/main/default/objects/Estate__c/fields/PACS__c.field-meta.xml
<CustomField>
    <fullName>PACS__c</fullName>
    <label>PACS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>