force-app/main/default/objects/Estate__c/fields/PAS__c.field-meta.xml
<CustomField>
    <fullName>PAS__c</fullName>
    <label>PAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>