force-app/main/default/objects/Estate__c/fields/PostgreSQL__c.field-meta.xml
<CustomField>
    <fullName>PostgreSQL__c</fullName>
    <label>PostgreSQL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>