force-app/main/default/objects/Estate__c/fields/Redhat_Version__c.field-meta.xml
<CustomField>
    <fullName>Redhat_Version__c</fullName>
    <label>Redhat Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>